@@ -1,22 +1,23 @@
 package greencity.service;
 
 import greencity.ModelUtils;
-import greencity.dto.event.CreateEventDto;
-import greencity.dto.event.CreateEventDtoResponse;
-import greencity.dto.event.UpdateEventDtoRequest;
-import greencity.dto.event.UpdateEventDtoResponse;
+import greencity.dto.event.*;
 import greencity.dto.eventdatetime.EventDateTimeLocationRequestDto;
 import greencity.dto.eventimage.EventImageResponseDto;
 import greencity.dto.tag.TagVO;
 import greencity.dto.user.UserVO;
 import greencity.entity.*;
+import greencity.enums.EventAttenderStatus;
 import greencity.enums.Role;
 import greencity.enums.TagType;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.TagNotFoundException;
 import greencity.exception.exceptions.UserHasNoPermissionToAccessException;
+import greencity.notification.NotificationPublisher;
+import greencity.repository.CancelledEventsRepository;
 import greencity.repository.EventRepository;
+import greencity.repository.EventLikeRepository;
 import greencity.repository.TagsRepo;
 import greencity.repository.UserRepo;
 import org.junit.jupiter.api.BeforeEach;
@@ -27,9 +28,12 @@ import org.mockito.Mock;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.time.ZonedDateTime;
 import java.util.*;
 
@@ -47,11 +51,19 @@ class EventServiceImplTest {
     @Mock
     private EventRepository eventRepository;
     @Mock
+    private EventLikeRepository eventLikeRepository;
+    @Mock
     private FileService fileService;
     @Mock
     private EventDateTimeLocationService eventDateTimeLocationService;
     @Mock
+    private NotificationService notificationService;
+    @Mock
     private ModelMapper modelMapper;
+    @Mock
+    private NotificationPublisher  notificationPublisher;
+    @Mock
+    CancelledEventsRepository cancelledEventsRepository;
 
     @InjectMocks
     private EventServiceImpl eventService;
@@ -127,7 +139,7 @@ class EventServiceImplTest {
         assertEquals(createEventDto.getDescription(), response.getDescription());
         assertEquals(createEventDto.getOpen(), response.getOpen());
         assertEquals(1, response.getImages().size());
-        assertEquals("path/to/image1.jpg", response.getImages().getFirst());
+        assertEquals("path/to/image1.jpg", response.getImages().get(0));
     }
 
     @Test
@@ -234,8 +246,11 @@ class EventServiceImplTest {
                 userRepo,
                 tagsRepo,
                 eventRepository,
+                cancelledEventsRepository,
                 fileService,
                 eventDateTimeLocationService,
+                eventLikeRepository,
+                notificationService,
                 modelMapper2
         );
 
@@ -243,7 +258,7 @@ class EventServiceImplTest {
         UserVO user = ModelUtils.getUserVO();
         Event event = ModelUtils.getEvent();
         event.setId(request.getId());
-        event.getDateTimes().getFirst().setId(1L);
+        event.getDateTimes().get(0).setId(1L);
 
         request.setMainImage("second.jpg");
         request.setImages(List.of("https://cdn.com/file/second.jpg"));
@@ -274,7 +289,6 @@ class EventServiceImplTest {
             return null;
         }).when(eventDateTimeLocationService).updateEventDateTimeLocation(any(), any());
         UpdateEventDtoResponse result = eventService2.updateEvent(request, null, user);
-        System.out.println(result);
         assertNotNull(result);
         assertEquals(1L, result.getId());
         assertEquals("Update Title", result.getTitle());
@@ -283,15 +297,15 @@ class EventServiceImplTest {
         assertNotNull(result.getMainImage());
         assertEquals("https://cdn.com/file/second.jpg", result.getMainImage().getImagePath());
         assertEquals(1, result.getEventImages().size());
-        assertEquals("https://cdn.com/file/second.jpg", result.getEventImages().getFirst().getImagePath());
+        assertEquals("https://cdn.com/file/second.jpg", result.getEventImages().get(0).getImagePath());
         assertEquals(1, result.getDateTimes().size());
-        assertEquals("Update location", result.getDateTimes().getFirst().getLocation());
-        assertEquals("Update link", result.getDateTimes().getFirst().getLink());
-        assertEquals(ZonedDateTime.parse("2026-12-14T10:30Z"), result.getDateTimes().getFirst().getStartDateTime());
-        assertEquals(ZonedDateTime.parse("2026-12-15T12:28Z"), result.getDateTimes().getFirst().getEndDateTime());
+        assertEquals("Update location", result.getDateTimes().get(0).getLocation());
+        assertEquals("Update link", result.getDateTimes().get(0).getLink());
+        assertEquals(ZonedDateTime.parse("2026-12-14T10:30Z"), result.getDateTimes().get(0).getStartDateTime());
+        assertEquals(ZonedDateTime.parse("2026-12-15T12:28Z"), result.getDateTimes().get(0).getEndDateTime());
         assertEquals(1, result.getTags().size());
         TagVO tag = result.getTags().iterator().next();
-        assertEquals("Соціальний", tag.getTagTranslations().getFirst().getName());
+        assertEquals("Соціальний", tag.getTagTranslations().get(0).getName());
 
         verify(eventDateTimeLocationService).isFutureEvent(any());
         verify(eventDateTimeLocationService).updateEventDateTimeLocation(eq(event), any());
@@ -305,8 +319,11 @@ class EventServiceImplTest {
                 userRepo,
                 tagsRepo,
                 eventRepository,
+                cancelledEventsRepository,
                 fileService,
                 eventDateTimeLocationService,
+                eventLikeRepository,
+                notificationService,
                 modelMapper2
         );
 
@@ -314,7 +331,7 @@ class EventServiceImplTest {
         UserVO user = ModelUtils.getUserVO();
         Event event = ModelUtils.getEvent();
         event.setId(request.getId());
-        event.getDateTimes().getFirst().setId(1L);
+        event.getDateTimes().get(0).setId(1L);
 
 
         request.setImages(List.of(""));
@@ -345,7 +362,7 @@ class EventServiceImplTest {
         assertEquals("https://cdn.com/file/UpdateMain.jpg", result.getEventImages().get(0).getImagePath());
         assertEquals(1, result.getTags().size());
         TagVO tag = result.getTags().iterator().next();
-        assertEquals("Соціальний", tag.getTagTranslations().getFirst().getName());
+        assertEquals("Соціальний", tag.getTagTranslations().get(0).getName());
 
         verify(eventDateTimeLocationService).isFutureEvent(any());
         verify(eventDateTimeLocationService).updateEventDateTimeLocation(eq(event), any());
@@ -360,8 +377,11 @@ class EventServiceImplTest {
                 userRepo,
                 tagsRepo,
                 eventRepository,
+                cancelledEventsRepository,
                 fileService,
                 eventDateTimeLocationService,
+                eventLikeRepository,
+                notificationService,
                 modelMapper2
         );
         UpdateEventDtoRequest request = ModelUtils.getUpdateEventDtoRequest();
@@ -440,7 +460,15 @@ class EventServiceImplTest {
     void updateEvent_ShouldRemoveImages_ThatAreMissingInRequest() {
         ModelMapper modelMapper2 = new ModelMapper();
         EventServiceImpl service = new EventServiceImpl(
-                userRepo, tagsRepo, eventRepository, fileService, eventDateTimeLocationService, modelMapper2
+            userRepo,
+            tagsRepo,
+            eventRepository,
+            cancelledEventsRepository,
+            fileService,
+            eventDateTimeLocationService,
+            eventLikeRepository,
+            notificationService,
+            modelMapper2
         );
         UpdateEventDtoRequest request = ModelUtils.getUpdateEventDtoRequest();
         request.setImages(List.of(
@@ -486,5 +514,281 @@ class EventServiceImplTest {
         assertFalse(actualPaths.contains("https://cdn.com/file/img4.jpg"));
     }
 
-}
+    @Test
+    void attendEvent_Success_OpenEvent() {
+        Event event = ModelUtils.getEvent();
+        UserVO userVO = ModelUtils.getUserVO();
+        event.getInitiator().setId(2L);
 
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+        when(userRepo.findById(userVO.getId())).thenReturn(Optional.of(user));
+
+        eventService.attendEvent(1L, userVO);
+
+        assertEquals(1, event.getAttenders().size());
+        assertEquals(EventAttenderStatus.ACCEPTED, event.getAttenders().get(0).getStatus());
+    }
+
+    @Test
+    void attendEvent_UserIsInitiator_ThrowsException() {
+        Event event = ModelUtils.getEvent();
+        UserVO userVO = ModelUtils.getUserVO();
+
+        when(eventRepository.findById(anyLong())).thenReturn(Optional.of(event));
+        when(userRepo.findById(userVO.getId())).thenReturn(Optional.of(user));
+
+        assertThrows(BadRequestException.class, () -> eventService.attendEvent(1L, userVO));
+    }
+
+    @Test
+    void attendEvent_AlreadyAccepted_ThrowsException() {
+        Event event = ModelUtils.getEvent();
+        User user = ModelUtils.getUser();
+        user.setId(3L);
+
+        event.getAttenders().add(EventAttender.builder()
+                .attender(user)
+                .event(event)
+                .status(EventAttenderStatus.ACCEPTED)
+                .build());
+
+        UserVO userVO = ModelUtils.getUserVO();
+        userVO.setId(3L);
+
+        when(eventRepository.findById(anyLong())).thenReturn(Optional.of(event));
+        when(userRepo.findById(userVO.getId())).thenReturn(Optional.of(user));
+
+        assertThrows(BadRequestException.class, () -> eventService.attendEvent(1L, userVO));
+    }
+
+    @Test
+    void attendEvent_AlreadyRequested_ThrowsException() {
+        Event event = ModelUtils.getEvent();
+        User user = ModelUtils.getUser();
+        user.setId(4L);
+
+        event.getAttenders().add(EventAttender.builder()
+                .attender(user)
+                .event(event)
+                .status(EventAttenderStatus.REQUESTED)
+                .build());
+
+        UserVO userVO = ModelUtils.getUserVO();
+        userVO.setId(4L);
+
+        when(eventRepository.findById(anyLong())).thenReturn(Optional.of(event));
+        when(userRepo.findById(userVO.getId())).thenReturn(Optional.of(user));
+
+        assertThrows(BadRequestException.class, () -> eventService.attendEvent(1L, userVO));
+    }
+
+    @Test
+    void attendEvent_ClosedEvent_StatusRequested() {
+        Event event = ModelUtils.getEvent();
+        event.setOpen(false);
+
+        User user = ModelUtils.getUser();
+        user.setId(3L);
+
+        UserVO userVO = ModelUtils.getUserVO();
+        userVO.setId(3L);
+
+
+        when(eventRepository.findById(anyLong())).thenReturn(Optional.of(event));
+        when(userRepo.findById(userVO.getId())).thenReturn(Optional.of(user));
+
+
+        eventService.attendEvent(3L, userVO);
+
+
+        assertEquals(1, event.getAttenders().size());
+        assertEquals(EventAttenderStatus.REQUESTED, event.getAttenders().get(0).getStatus());
+    }
+
+    @Test
+    void acceptAttenderToEvent_Success() {
+        Event event = ModelUtils.getEvent();
+        User initiator = ModelUtils.getUser();
+        initiator.setId(1L);
+        event.setInitiator(initiator);
+
+        UserVO userVO = ModelUtils.getUserVO();
+        userVO.setId(1L);
+        userVO.setRole(Role.ROLE_USER);
+
+        User attenderUser = new User();
+        attenderUser.setId(2L);
+
+        EventAttender attender = new EventAttender();
+        attender.setAttender(attenderUser);
+        attender.setStatus(EventAttenderStatus.REQUESTED);
+        event.setAttenders(new ArrayList<>(List.of(attender)));
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+
+        eventService.acceptAttenderToEvent(1L, 2L, userVO);
+
+        assertEquals(EventAttenderStatus.ACCEPTED, event.getAttenders().get(0).getStatus());
+    }
+
+    @Test
+    void acceptAttenderToEvent_AccessDenied_UserIsNotAdminOrInitiator() {
+        User initiator = new User();
+        initiator.setId(1L);
+
+        Event event = ModelUtils.getEvent();
+        event.setInitiator(initiator);
+        event.setAttenders(new ArrayList<>());
+
+        UserVO notAllowedUser = new UserVO();
+        notAllowedUser.setId(2L);
+        notAllowedUser.setRole(Role.ROLE_USER);
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+
+        assertThrows(AccessDeniedException.class, () ->
+                eventService.acceptAttenderToEvent(1L, 3L, notAllowedUser)
+        );
+    }
+    @Test
+    void checkIfEventNotCancelled_EventAlreadyCancelled_ThrowsException() throws Exception {
+        Event event = ModelUtils.getEvent();
+        event.setId(1L);
+
+        when(cancelledEventsRepository.findByEventId(1L))
+                .thenReturn(List.of(new CancelledEvent()));
+
+        Method method = EventServiceImpl.class.getDeclaredMethod("checkIfEventNotCancelled", Event.class);
+        method.setAccessible(true);
+
+        assertThrows(BadRequestException.class, () -> {
+            try {
+                method.invoke(eventService, event);
+            } catch (InvocationTargetException e) {
+                throw e.getCause();
+            }
+        });
+    }
+
+
+    @Test
+    void findAttendersIdByEventId_ReturnsCorrectIds() {
+        Event event = ModelUtils.getEvent();
+        User user1 = new User(); user1.setId(1L);
+        User user2 = new User(); user2.setId(2L);
+
+        event.setAttenders(List.of(
+                EventAttender.builder().attender(user1).build(),
+                EventAttender.builder().attender(user2).build()
+        ));
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+
+        List<Long> result = eventService.findAttendersIdByEventId(1L);
+
+        assertEquals(List.of(1L, 2L), result);
+    }
+
+    @Test
+    void findById_ReturnsMappedEventVO() {
+        Event event = ModelUtils.getEvent();
+        EventVO eventVO = ModelUtils.getEventVO();
+        event.setId(1L);
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+        when(modelMapper.map(event, EventVO.class)).thenReturn(eventVO);
+
+        EventVO result = eventService.findById(1L);
+
+        assertNotNull(result);
+        assertEquals(1L, result.getId());
+        assertEquals("title", result.getTitle());
+    }
+
+    @Test
+    void unsubscribeFromEvent_SuccessfullyRemovesUser() {
+        Event event = ModelUtils.getEvent();
+        event.setId(1L);
+        User user = ModelUtils.getUser();
+        user.setId(5L);
+
+        event.setAttenders(new ArrayList<>(List.of(
+                EventAttender.builder().attender(user).build()
+        )));
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+        when(userRepo.findById(5L)).thenReturn(Optional.of(user));
+        when(cancelledEventsRepository.findByEventId(1L)).thenReturn(Collections.emptyList());
+
+        eventService.unsubscribeFromEvent(1L, UserVO.builder().id(5L).build());
+
+        assertTrue(event.getAttenders().isEmpty());
+        verify(eventRepository).save(event);
+    }
+    @Test
+    void unsubscribeFromEvent_UserNotAttender_ThrowsNotFoundException() {
+        Event event = ModelUtils.getEvent();
+        event.setId(1L);
+        User user = ModelUtils.getUser();
+        user.setId(99L);
+
+        event.setAttenders(new ArrayList<>());
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+        when(userRepo.findById(99L)).thenReturn(Optional.of(user));
+        when(cancelledEventsRepository.findByEventId(1L)).thenReturn(Collections.emptyList());
+
+        assertThrows(NotFoundException.class, () -> {
+            eventService.unsubscribeFromEvent(1L, UserVO.builder().id(99L).build());
+        });
+    }
+
+    @Test
+    void cancelEventById_Success_AdminUser() {
+        Event event = ModelUtils.getEvent();
+        event.setId(1L);
+        event.setDateTimes(List.of(ModelUtils.getEventDateTimeLocation()));
+        User initiator = ModelUtils.getUser();
+        initiator.setId(10L);
+
+        UserVO userVO = UserVO.builder()
+                .id(10L)
+                .role(Role.ROLE_ADMIN)
+                .build();
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+        when(userRepo.findById(10L)).thenReturn(Optional.of(initiator));
+        when(cancelledEventsRepository.findByEventId(1L)).thenReturn(List.of());
+        doNothing().when(eventDateTimeLocationService).isFutureEvent(any());
+
+        eventService.cancelEventById(1L, userVO, "Bad weather");
+
+        verify(cancelledEventsRepository).save(any(CancelledEvent.class));
+    }
+
+    @Test
+    void cancelEventById_Success_InitiatorCancelsOwnEvent() {
+        Event event = ModelUtils.getEvent();
+        event.setId(1L);
+        event.setDateTimes(List.of(ModelUtils.getEventDateTimeLocation()));
+        User initiator = ModelUtils.getUser();
+        initiator.setId(2L);
+        event.setInitiator(initiator);
+
+        UserVO userVO = UserVO.builder()
+                .id(2L)
+                .role(Role.ROLE_USER)
+                .build();
+
+        when(eventRepository.findById(1L)).thenReturn(Optional.of(event));
+        when(userRepo.findById(2L)).thenReturn(Optional.of(initiator));
+        when(cancelledEventsRepository.findByEventId(1L)).thenReturn(List.of());
+        doNothing().when(eventDateTimeLocationService).isFutureEvent(any());
+
+        eventService.cancelEventById(1L, userVO, "Reason");
+
+        verify(cancelledEventsRepository).save(any(CancelledEvent.class));
+
+    }
+
+}
